[tool.poetry]
name = "braniaclms"
version = "0.1.0"
description = ""
authors = ["Dmitry"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
django = "<3.3"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
